crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@237.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into prtx2 select 1 + i%30, i, i\n  from generate_series(1,500) i, generate_series(1,10) j;"
---
InsertStmt@0..97
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "prtx2"
  Whitespace@17..18 " "
  SelectStmt@18..96
    Select@18..24 "select"
    Whitespace@24..25 " "
    ResTarget@25..33
      AExpr@25..33
        AConst@25..26
          Iconst@25..26 "1"
        Whitespace@26..27 " "
        Ascii43@27..28 "+"
        Whitespace@28..29 " "
        AExpr@29..33
          ColumnRef@29..30
            Ident@29..30 "i"
          Ascii37@30..31 "%"
          AConst@31..33
            Iconst@31..33 "30"
    Ascii44@33..34 ","
    Whitespace@34..35 " "
    ResTarget@35..36
      ColumnRef@35..36
        Ident@35..36 "i"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..39
      ColumnRef@38..39
        Ident@38..39 "i"
    Newline@39..40 "\n"
    Whitespace@40..42 "  "
    From@42..46 "from"
    Whitespace@46..47 " "
    RangeFunction@47..71
      List@47..68
        FuncCall@47..68
          Ident@47..62 "generate_series"
          Ascii40@62..63 "("
          AConst@63..64
            Iconst@63..64 "1"
          Ascii44@64..65 ","
          AConst@65..68
            Iconst@65..68 "500"
      Ascii41@68..69 ")"
      Whitespace@69..70 " "
      Alias@70..71
        Ident@70..71 "i"
    Ascii44@71..72 ","
    Whitespace@72..73 " "
    RangeFunction@73..96
      List@73..93
        FuncCall@73..93
          Ident@73..88 "generate_series"
          Ascii40@88..89 "("
          AConst@89..90
            Iconst@89..90 "1"
          Ascii44@90..91 ","
          AConst@91..93
            Iconst@91..93 "10"
      Ascii41@93..94 ")"
      Whitespace@94..95 " "
      Alias@95..96
        Ident@95..96 "j"
  Ascii59@96..97 ";"

