crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@238.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index on prtx2 (b);
---
IndexStmt@0..26
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  On@13..15 "on"
  Whitespace@15..16 " "
  RangeVar@16..21
    Ident@16..21 "prtx2"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  IndexElem@23..24
    Ident@23..24 "b"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

