crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c FROM prt1 t1 RIGHT JOIN prt2 t2 ON t1.a = t2.b WHERE t2.a = 0 ORDER BY t1.a, t2.b;"
---
SelectStmt@0..112
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  JoinExpr@35..76
    RangeVar@35..42
      Ident@35..39 "prt1"
      Whitespace@39..40 " "
      Alias@40..42
        Ident@40..42 "t1"
    Whitespace@42..43 " "
    Right@43..48 "RIGHT"
    Whitespace@48..49 " "
    Join@49..53 "JOIN"
    Whitespace@53..54 " "
    RangeVar@54..61
      Ident@54..58 "prt2"
      Whitespace@58..59 " "
      Alias@59..61
        Ident@59..61 "t2"
    Whitespace@61..62 " "
    On@62..64 "ON"
    Whitespace@64..65 " "
    AExpr@65..76
      ColumnRef@65..69
        Ident@65..67 "t1"
        Ascii46@67..68 "."
        Ident@68..69 "a"
      Whitespace@69..70 " "
      Ascii61@70..71 "="
      Whitespace@71..72 " "
      ColumnRef@72..76
        Ident@72..74 "t2"
        Ascii46@74..75 "."
        Ident@75..76 "b"
  Whitespace@76..77 " "
  Where@77..82 "WHERE"
  Whitespace@82..83 " "
  AExpr@83..91
    ColumnRef@83..87
      Ident@83..85 "t2"
      Ascii46@85..86 "."
      Ident@86..87 "a"
    Whitespace@87..88 " "
    Ascii61@88..89 "="
    Whitespace@89..90 " "
    AConst@90..91
      Iconst@90..91 "0"
  Whitespace@91..92 " "
  SortBy@92..105
    Order@92..97 "ORDER"
    Whitespace@97..98 " "
    By@98..100 "BY"
    Whitespace@100..101 " "
    ColumnRef@101..105
      Ident@101..103 "t1"
      Ascii46@103..104 "."
      Ident@104..105 "a"
  Ascii44@105..106 ","
  Whitespace@106..107 " "
  SortBy@107..111
    ColumnRef@107..111
      Ident@107..109 "t2"
      Ascii46@109..110 "."
      Ident@110..111 "b"
  Ascii59@111..112 ";"

