crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@254.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt2_adv_p1 PARTITION OF prt2_adv FOR VALUES FROM (100) TO (150);
---
CreateStmt@0..78
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "prt2_adv_p1"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "prt2_adv"
  Whitespace@46..47 " "
  For@47..50 "FOR"
  Whitespace@50..51 " "
  Values@51..57 "VALUES"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..76
    From@58..62 "FROM"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..67
      Iconst@64..67 "100"
    Ascii41@67..68 ")"
    Whitespace@68..69 " "
    To@69..71 "TO"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    AConst@73..76
      Iconst@73..76 "150"
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

